--- a/style.css
+++ b/style.css
@@ -1,28 +1,10 @@
-.color{
+.color {
     border: 1px solid black;
     display: inline-block;
-}
-
-#black {
     background-color: black;
-    height: 50px;
     width: 50px;
-}
-
-#color2 {
-    background-color: red;
     height: 50px;
-    width: 50px;
-}
-
-#color3 {
-    background-color: yellow;
-    height: 50px;
-    width: 50px;
-}
-
-#color4 {
-    background-color: blue;
-    height: 50px;
-    width: 50px;
-}
+   }
+   #black {
+    background-color: black;
+   }
